add runtime for linux-64

--- a/bin/package.json
+++ b/bin/package.json
@@ -2,7 +2,7 @@
   "name": "hide",
   "main": "index.html",
   "window": {
-    "title": "codename: Haxe IDE",
+    "title": "Haxe IDE",
     "toolbar": false,
     "frame": true,
     "width": 800,
