--- a/plugin/plugin.misterpah.ProjectTree/bin/package.json
+++ b/plugin/plugin.misterpah.ProjectTree/bin/package.json
@@ -3,7 +3,7 @@
 "actualName":"plugin.misterpah.ProjectTree",
 "author":"misterpah",
 "website":"http://www.misterpah.com",
-"dependency":["plugin.misterpah.ProjectAccess"],
+"dependency":["plugin.misterpah.ProjectAccess","plugin.misterpah.FileAccess"],
 "configuration":{
 	"default":0
 	}
