--- a/.travis.yml.template
+++ b/.travis.yml.template
@@ -21,28 +21,4 @@ before_script:
 script:
   - cd source
   - haxe build.hxml
-  - cd ../plugin/
-  - cd plugin.misterpah.Compiler/source
-  - haxe build.hxml
-  - cd ../..
-  - cd plugin.misterpah.Completion/source
-  - haxe build.hxml
-  - cd ../..
-  - cd plugin.misterpah.Editor/source
-  - haxe build.hxml
-  - cd ../..
-  - cd plugin.misterpah.FileAccess/source
-  - haxe build.hxml
-  - cd ../..
-  - cd plugin.misterpah.HaxeCheck/source
-  - haxe build.hxml
-  - cd ../..
-  - cd plugin.misterpah.HaxeServer/source
-  - haxe build.hxml
-  - cd ../..
-  - cd plugin.misterpah.ProjectAccess/source
-  - haxe build.hxml
-  - cd ../..
-  - cd plugin.misterpah.ProjectTree/source
-  - haxe build.hxml
-  - cd ../..
+::plugins::
